--- a/tensor_model/templates/tensor_model/main_page.html
+++ b/tensor_model/templates/tensor_model/main_page.html
@@ -16,9 +16,9 @@
         <p></p>
         <p></p>
         <p></p>
-        <p>pre-learning data: ~/tensor/prelearning/</p>
+        <p>data for pre-learning: ~/tensor/prelearning/</p>
         <p></p>
-        <p>location determination data: ~/tensor/insert/</p>
+        <p>data for determination of location: ~/tensor/insert/</p>
     </div>
 
 </body>
